--- a/fine-tune-model-1802.ipynb
+++ b/fine-tune-model-1802.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting together\n",
             "  Downloading together-0.2.11-py3-none-any.whl (43 kB)\n",
@@ -65,43 +51,40 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import together"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "tvz7Cka10y0U"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import together"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "api_key = \"b229c0fa1e88b16cd9ac2110faf43da5c1c5c1297a9024a1855fd5e57aa65229\""
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "5WzjYlWU033x"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "api_key = \"...\""
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "together.api_key = api_key"
-      ],
+      "execution_count": 6,
       "metadata": {
         "id": "jWoQjP3L07K-"
       },
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "together.api_key = api_key"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "resp = together.Files.check(file=\"/content/training_v1.jsonl\")\n",
-        "print(resp)"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -109,76 +92,96 @@
         "id": "zQs5Dv2E1CN1",
         "outputId": "d8eef9a7-2729-4e6f-c75f-db9abe5d5a75"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'is_check_passed': True, 'model_special_tokens': 'we are not yet checking end of sentence tokens for this model', 'file_present': 'File found', 'file_size': 'File size 0.001 GB', 'num_samples': 225}\n"
           ]
         }
+      ],
+      "source": [
+        "resp = together.Files.check(file=\"/content/training_v1.jsonl\")\n",
+        "print(resp)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "resp = together.Files.upload(file=\"/content/training_v1.jsonl\")\n",
-        "file_id = resp[\"id\"]\n",
-        "file_id"
-      ],
+      "execution_count": 8,
       "metadata": {
-        "id": "lIKgzYFa1qQY",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
+        "id": "lIKgzYFa1qQY",
         "outputId": "4d0e2797-6638-479e-c4a7-eeb080f91c07"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Uploading /content/training_v1.jsonl: 100%|██████████| 744k/744k [00:00<00:00, 956kB/s] \n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'file-37e4e32d-6585-419a-a8f5-13b3aa85f927'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'file-37e4e32d-6585-419a-a8f5-13b3aa85f927'"
+            ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "resp = together.Files.upload(file=\"/content/training_v1.jsonl\")\n",
+        "file_id = resp[\"id\"]\n",
+        "file_id"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "BpKEMcELynLX"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "together.Models.list()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "_OrBPCsPmR8W"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "together.Models.list()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "68TPZ11c1Sqy",
+        "outputId": "f4998430-b38f-4d75-e87e-b90641b766ba"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'training_file': 'file-37e4e32d-6585-419a-a8f5-13b3aa85f927', 'validation_file': '', 'model_output_name': 'abdibrokhim@gmail.com/llama-2-70b-chat-brain-mri-1802-2024-02-17-20-07-21', 'model_output_path': 's3://together-dev/finetune/65cfcbab16f2b340bd144397/abdibrokhim@gmail.com/llama-2-70b-chat-brain-mri-1802-2024-02-17-20-07-21/ft-291d296a-1453-4edc-94d8-ef48ce3729ff', 'Suffix': 'brain-mri-1802', 'model': 'togethercomputer/llama-2-70b-chat', 'n_epochs': 10, 'n_checkpoints': 1, 'batch_size': 32, 'learning_rate': 1e-05, 'eval_steps': 0, 'user_id': '65cfcbab16f2b340bd144397', 'lora': False, 'lora_r': 8, 'lora_alpha': 8, 'lora_dropout': 0, 'staring_epoch': 0, 'training_offset': 0, 'checkspoint_path': '', 'random_seed': '', 'created_at': '2024-02-17T20:07:21.309Z', 'updated_at': '2024-02-17T20:07:21.309Z', 'status': 'pending', 'owner_address': '0x2b92f20013be77db0632832eb8148b153b61ffa7', 'id': 'ft-291d296a-1453-4edc-94d8-ef48ce3729ff', 'job_id': '', 'token_count': 0, 'param_count': 0, 'total_price': 0, 'epochs_completed': 0, 'events': [{'object': 'fine-tune-event', 'created_at': '2024-02-17T20:07:21.309Z', 'level': '', 'message': 'Fine tune request created', 'type': 'JOB_PENDING', 'param_count': 0, 'token_count': 0, 'wandb_url': '', 'checkpoint_path': '', 'model_path': '', 'training_offset': 0, 'hash': ''}], 'queue_depth': 0, 'wandb_key': 'a2139314197b1f2f8006e86df51293aea854017a', 'wandb_project_name': '', 'wandb_url': '', 'enable_checkpoints': False, 'internal_flags': '', 'UsedModelName': '', 'TrainingFileNumLines': 0, 'TrainingFileSize': 761873, 'job_stats': {'FtUserTime': '', 'FtSysTime': '', 'FtMaxRss': 0, 'FtMinPgFlt': 0, 'FtMajPgFlt': 0, 'FtInBlock': 0, 'FtOutBlock': 0, 'FtNvCsw': 0, 'FtNivCsw': 0}}\n"
+          ]
+        }
+      ],
       "source": [
         "resp = together.Finetune.create(\n",
         "  training_file = 'file-37e4e32d-6585-419a-a8f5-13b3aa85f927',\n",
@@ -188,35 +191,16 @@
         "  batch_size = 4,\n",
         "  learning_rate = 1e-5,\n",
         "  suffix = 'brain-mri-1802',\n",
-        "  wandb_api_key = 'a2139314197b1f2f8006e86df51293aea854017a',\n",
+        "  wandb_api_key = '...',\n",
         ")\n",
         "\n",
         "fine_tune_id = resp['id']\n",
         "print(resp)"
-      ],
-      "metadata": {
-        "id": "68TPZ11c1Sqy",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f4998430-b38f-4d75-e87e-b90641b766ba"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'training_file': 'file-37e4e32d-6585-419a-a8f5-13b3aa85f927', 'validation_file': '', 'model_output_name': 'abdibrokhim@gmail.com/llama-2-70b-chat-brain-mri-1802-2024-02-17-20-07-21', 'model_output_path': 's3://together-dev/finetune/65cfcbab16f2b340bd144397/abdibrokhim@gmail.com/llama-2-70b-chat-brain-mri-1802-2024-02-17-20-07-21/ft-291d296a-1453-4edc-94d8-ef48ce3729ff', 'Suffix': 'brain-mri-1802', 'model': 'togethercomputer/llama-2-70b-chat', 'n_epochs': 10, 'n_checkpoints': 1, 'batch_size': 32, 'learning_rate': 1e-05, 'eval_steps': 0, 'user_id': '65cfcbab16f2b340bd144397', 'lora': False, 'lora_r': 8, 'lora_alpha': 8, 'lora_dropout': 0, 'staring_epoch': 0, 'training_offset': 0, 'checkspoint_path': '', 'random_seed': '', 'created_at': '2024-02-17T20:07:21.309Z', 'updated_at': '2024-02-17T20:07:21.309Z', 'status': 'pending', 'owner_address': '0x2b92f20013be77db0632832eb8148b153b61ffa7', 'id': 'ft-291d296a-1453-4edc-94d8-ef48ce3729ff', 'job_id': '', 'token_count': 0, 'param_count': 0, 'total_price': 0, 'epochs_completed': 0, 'events': [{'object': 'fine-tune-event', 'created_at': '2024-02-17T20:07:21.309Z', 'level': '', 'message': 'Fine tune request created', 'type': 'JOB_PENDING', 'param_count': 0, 'token_count': 0, 'wandb_url': '', 'checkpoint_path': '', 'model_path': '', 'training_offset': 0, 'hash': ''}], 'queue_depth': 0, 'wandb_key': 'a2139314197b1f2f8006e86df51293aea854017a', 'wandb_project_name': '', 'wandb_url': '', 'enable_checkpoints': False, 'internal_flags': '', 'UsedModelName': '', 'TrainingFileNumLines': 0, 'TrainingFileSize': 761873, 'job_stats': {'FtUserTime': '', 'FtSysTime': '', 'FtMaxRss': 0, 'FtMinPgFlt': 0, 'FtMajPgFlt': 0, 'FtInBlock': 0, 'FtOutBlock': 0, 'FtNvCsw': 0, 'FtNivCsw': 0}}\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(together.Finetune.get_job_status(fine_tune_id=fine_tune_id))"
-      ],
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -224,16 +208,32 @@
         "id": "SX3SOcRKXTVq",
         "outputId": "05048723-2bd6-48c6-94ea-fdaa7fd53b26"
       },
-      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "running\n"
           ]
         }
+      ],
+      "source": [
+        "print(together.Finetune.get_job_status(fine_tune_id=fine_tune_id))"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
